--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "jotai": "^1.9.1",
     "next": "13.0.1",
     "react": "18.2.0",
